1/20/2012
---------------------------
- KO Changed save behavior to save to existing file rather than prompting
- KO Fixed #470 (Label Positions Relative to Soundings Overlap (Sometimes...))

1/19/2012
---------------------------
- KO Fixed #478 (verdat deleted when save fails)
- KO Fixed #480 (Selected points should be highlighted)